fix overflow scrollbar

--- a/styles/sass/pages/_sets.scss
+++ b/styles/sass/pages/_sets.scss
@@ -16,6 +16,9 @@
 .overflow-y-scroll {
   overflow-y: scroll;
 }
+.overflow-y-auto {
+  overflow-y: auto;
+}
 
 .keyboard-container {
   height: 100%;
